# langchain_streamlit

./: .gitignore  README.md
.github/actions/check_directory/: action.yml  check_directory.yml
.github/workflows/: assign.yml  cd-deploy.yml  ci-backend.yml  ci-frontend.yml  sync-branch-protection.yml  sync-labels.yml  sync.yml
firestore/: .env.temp  .gitignore  .pre-commit-config.yaml  firebase.py  package.json  pnpm-lock.yaml  pyproject.toml
firestore/doc/: FirebaseCredential.md
firestore/src/: __init__.py  config.py
firestore/src/Controllers/: Controllers.py
firestore/src/Logging/: Logging.py
firestore/src/models/: User.py
langchain-chat/: .dockerignore  .env.temp  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
langchain-chat/cloud/: credential.sh
langchain-chat/deploy/: Deploy.md  docker_logs.txt
langchain-chat/deploy/github/: deploy.sh
langchain-chat/deploy/local/: deploy.sh
langchain-chat/src/: __init__.py
langchain-chat/src/control/: HandleStreamlit.py  Markdown.py  VertexAIChat.py  config.py
langchain-chat/src/model/: RAG_Prompt.md  greeting_content.md  prompt_general.md  prompt_initial.md
langchain-chat/src/view/: Format.py  langchainchat.py
